# data-eraser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: brokers.sample.yaml  profile.sample.yaml
src/privacy_toolkit/: __init__.py  __main__.py  app.py  cli.py
src/privacy_toolkit/config/: __init__.py  loader.py  schemas.py  settings.py
src/privacy_toolkit/core/: __init__.py  constants.py  exceptions.py  logging.py  types.py
src/privacy_toolkit/db/: __init__.py  database.py  models.py  repository.py  seed.py
src/privacy_toolkit/network/: __init__.py  anonymizer.py  client.py  proxy.py  rate_limiter.py  robots.py  tor.py  verifier.py
src/privacy_toolkit/optout/: __init__.py  email_verification.py  manual_steps.py  request_builder.py  status_machine.py  workflow.py
src/privacy_toolkit/recon/: __init__.py  broker_adapter.py  evidence.py  parsers.py  scanner.py  search_queries.py
src/privacy_toolkit/scheduler/: __init__.py  jobs.py  runner.py
src/privacy_toolkit/security/: __init__.py  encryption.py  redaction.py  secrets.py
src/privacy_toolkit/ui/: __init__.py  app.py  theme.py
src/privacy_toolkit/ui/screens/: __init__.py  brokers.py  dashboard.py  optouts.py  scans.py  settings.py
src/privacy_toolkit/ui/widgets/: __init__.py  command_input.py  header.py  logs.py  menu.py  overview.py  status_table.py
src/privacy_toolkit/utils/: __init__.py  dates.py  files.py  validators.py
tests/: test_anonymizer.py  test_config.py  test_database.py  test_redaction.py  test_status_machine.py
